<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.spongepowered</groupId>
    <artifactId>systemofadownload</artifactId>
    <version>1.0-SNAPSHOT</version>
    <organization>
        <name>SpongePowered</name>
    </organization>
    <inceptionYear>2020</inceptionYear>
    <licenses>
        <license>
            <name>MIT</name>
        </license>
    </licenses>

    <packaging>pom</packaging>

    <modules>
        <module>utils</module>
        <module>commit-api</module>
        <module>commit-impl</module>
        <module>changelog-api</module>
        <module>changelog-impl</module>
        <module>artifact-api</module>
        <module>artifact-event</module>
        <module>artifact-impl</module>
        <module>artifact-worker</module>
        <module>graphql-api</module>
        <module>graphql-server</module>
        <module>webhooks</module>
        <module>integration-tests</module>
        <module>webooks-api</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
            </plugin>
            <plugin>
                <groupId>com.lightbend.lagom</groupId>
                <artifactId>lagom-maven-plugin</artifactId>
                <version>${lagom.version}</version>
                <configuration>
                    <serviceLocatorEnabled>true</serviceLocatorEnabled>
                    <kafkaEnabled>true</kafkaEnabled>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>14</release>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.4.1</version>
                <executions>
                    <execution>
                        <id>enforce-maven-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <!-- Lagom requires at least Maven version 3.6.0 -->
                                <requireMavenVersion>
                                    <version>[3.6.0,)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${mycila.license.version}</version>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <header>HEADER.txt</header>
                            <excludes>
                                <exclude>**/README</exclude>
                                <exclude>src/test/resources/**</exclude>
                                <exclude>src/main/resources/**</exclude>
                                <exclude>*.xml</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                    <properties>
                        <name>SystemOfADownload</name>
                        <organization>SpongePowered</organization>
                        <url>https://spongepowered.org/</url>
                    </properties>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.lightbend.lagom</groupId>
                <artifactId>lagom-maven-dependencies</artifactId>
                <version>${lagom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.vavr</groupId>
                <artifactId>vavr</artifactId>
                <version>${vavr.version}</version>
            </dependency>
            <dependency>
                <groupId>io.vavr</groupId>
                <artifactId>vavr-jackson</artifactId>
                <version>${vavr.version}</version>
            </dependency>
            <dependency>
                <groupId>org.pac4j</groupId>
                <artifactId>lagom-pac4j_${scala.binary.version}</artifactId>
                <version>${lagom.pac4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.pac4j</groupId>
                <artifactId>pac4j-http</artifactId>
                <version>${pac4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.pac4j</groupId>
                <artifactId>pac4j-jwt</artifactId>
                <version>${pac4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.taymyr.lagom</groupId>
                <artifactId>lagom-openapi-java-api_${scala.binary.version}</artifactId>
                <version>${lagom.openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.taymyr.lagom</groupId>
                <artifactId>lagom-openapi-java-impl_${scala.binary.version}</artifactId>
                <version>${lagom.openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <scala.binary.version>2.13</scala.binary.version>
        <swagger.version>2.1.1</swagger.version>

        <lagom.openapi.version>1.2.2</lagom.openapi.version>
        <lagom.version>1.6.4</lagom.version>
        <pac4j.version>3.7</pac4j.version>
        <lagom.pac4j.version>2.1.0</lagom.pac4j.version>
        <vavr.version>0.10.3</vavr.version>
        <mycila.license.version>4.0.rc2</mycila.license.version>
    </properties>
</project>
